[gd_scene load_steps=2 format=3 uid="uid://rteo4f1qpmke"]

[ext_resource type="Script" path="res://beings/recursive_creation_console_universal_being.gd" id="1_console"]

[node name="RecursiveCreationConsole" type="Node3D"]
script = ExtResource("1_console")

[node name="MainLayout" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainLayout"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayout/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="PanelContainer" parent="MainLayout/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainLayout/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MainLayout/MarginContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Recursive Creation Console"
horizontal_alignment = 1

[node name="StatusPanel" type="PanelContainer" parent="MainLayout/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayout/MarginContainer/VBoxContainer/StatusPanel"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MainLayout/MarginContainer/VBoxContainer/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "No active universe"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="MainLayout/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CommandPanel" type="PanelContainer" parent="MainLayout/MarginContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayout/MarginContainer/VBoxContainer/HSplitContainer/CommandPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MainLayout/MarginContainer/VBoxContainer/HSplitContainer/CommandPanel/VBoxContainer"]
layout_mode = 2
text = "Commands"
horizontal_alignment = 1

[node name="UniverseView" type="SubViewportContainer" parent="MainLayout/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="MainLayout/MarginContainer/VBoxContainer/HSplitContainer/UniverseView"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="AIPanel" type="PanelContainer" parent="MainLayout/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayout/MarginContainer/VBoxContainer/AIPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MainLayout/MarginContainer/VBoxContainer/AIPanel/VBoxContainer"]
layout_mode = 2
text = "AI Collaboration"
horizontal_alignment = 1

[node name="AISuggestion" type="Label" parent="MainLayout/MarginContainer/VBoxContainer/AIPanel/VBoxContainer"]
layout_mode = 2
text = "AI suggestions will appear here..."
autowrap_mode = 3
horizontal_alignment = 1

[node name="CollaborateButton" type="Button" parent="MainLayout/MarginContainer/VBoxContainer/AIPanel/VBoxContainer"]
layout_mode = 2
text = "Collaborate with AI" 