# ==================================================
# UNIVERSAL BEING: Recursive Creation Console
# TYPE: Console
# PURPOSE: Interface for creating and modifying universes recursively
# COMPONENTS: universe_physics.ub.zip, universe_time.ub.zip, universe_lod.ub.zip
# SCENES: res://scenes/console/creation_console.tscn
# ==================================================

extends UniversalBeing
class_name RecursiveCreationConsoleUniversalBeing

# Console state
var active_universe: Node = null  # Will be cast to UniverseUniversalBeing when needed
var creation_history: Array[Dictionary] = []
var console_mode: String = "creation"  # creation, modification, observation
var ai_collaboration_enabled: bool = true

# Console capabilities
var available_commands: Array[String] = [
	"create_universe",
	"modify_universe",
	"observe_universe",
	"evolve_being",
	"modify_physics",
	"adjust_time",
	"set_lod",
	"open_portal",
	"query_history",
	"collaborate_with_ai"
]

# ===== PENTAGON ARCHITECTURE =====

func pentagon_init() -> void:
	super.pentagon_init()
	
	# Set Universal Being identity
	being_type = "console"
	being_name = "Recursive Creation Console"
	consciousness_level = 3  # High consciousness for AI collaboration
	
	# Load console components
	add_component("res://components/universe_physics.ub.zip")
	add_component("res://components/universe_time.ub.zip")
	add_component("res://components/universe_lod.ub.zip")
	
	print("üéÆ %s: Pentagon Init Complete" % being_name)

func pentagon_ready() -> void:
	super.pentagon_ready()
	
	# Load console scene
	load_scene("res://scenes/console/creation_console.tscn")
	
	# Initialize console UI
	setup_console_interface()
	
	print("üéÆ %s: Pentagon Ready Complete" % being_name)

func pentagon_process(delta: float) -> void:
	super.pentagon_process(delta)
	
	# Update console state
	if active_universe:
		update_universe_status()
	
	# Process AI collaboration if enabled
	if ai_collaboration_enabled:
		process_ai_suggestions()

func pentagon_input(event: InputEvent) -> void:
	super.pentagon_input(event)
	
	# Handle console input
	if event is InputEventKey and event.pressed:
		handle_console_shortcuts(event)

func pentagon_sewers() -> void:
	# Save console state
	save_console_state()
	
	# Cleanup active universe if exists
	if active_universe:
		active_universe.pentagon_sewers()
	
	super.pentagon_sewers()
	print("üéÆ %s: Pentagon Sewers Complete" % being_name)

# ===== CONSOLE INTERFACE =====

func setup_console_interface() -> void:
	"""Setup the console UI and controls"""
	if not scene_is_loaded:
		push_error("Console scene not loaded")
		return
	
	# Setup UI elements
	var command_panel = get_scene_node("CommandPanel")
	if command_panel:
		for command in available_commands:
			add_command_button(command_panel, command)
	
	# Setup universe view
	var universe_view = get_scene_node("UniverseView")
	if universe_view:
		setup_universe_viewport(universe_view)
	
	# Setup AI collaboration panel
	if ai_collaboration_enabled:
		setup_ai_panel()

func add_command_button(panel: Control, command: String) -> void:
	"""Add a command button to the console panel"""
	var button = Button.new()
	button.text = command.replace("_", " ").capitalize()
	button.name = command + "Button"
	button.pressed.connect(func(): execute_command(command))
	panel.add_child(button)

func setup_universe_viewport(viewport: SubViewport) -> void:
	"""Setup the viewport for universe visualization"""
	if active_universe:
		var universe_camera = Camera3D.new()
		universe_camera.name = "UniverseCamera"
		viewport.add_child(universe_camera)
		
		# Add universe to viewport
		viewport.add_child(active_universe)

func setup_ai_panel() -> void:
	"""Setup the AI collaboration panel"""
	var ai_panel = get_scene_node("AIPanel")
	if ai_panel:
		# Add AI suggestion display
		var suggestion_label = Label.new()
		suggestion_label.name = "AISuggestion"
		suggestion_label.text = "AI suggestions will appear here..."
		ai_panel.add_child(suggestion_label)
		
		# Add AI collaboration controls
		var collaborate_button = Button.new()
		collaborate_button.name = "CollaborateButton"
		collaborate_button.text = "Collaborate with AI"
		collaborate_button.pressed.connect(collaborate_with_ai)
		ai_panel.add_child(collaborate_button)

# ===== CONSOLE COMMANDS =====

func execute_command(command: String, args: Array = []) -> void:
	"""Execute a console command"""
	match command:
		"create_universe":
			create_new_universe(args[0] if args.size() > 0 else "New Universe")
		"modify_universe":
			modify_active_universe(args[0] if args.size() > 0 else {})
		"observe_universe":
			observe_universe(args[0] if args.size() > 0 else active_universe.being_uuid)
		"evolve_being":
			evolve_being(args[0] if args.size() > 0 else "", args[1] if args.size() > 1 else "")
		"modify_physics":
			modify_physics(args[0] if args.size() > 0 else {})
		"adjust_time":
			adjust_time(args[0] if args.size() > 0 else 1.0)
		"set_lod":
			set_lod_level(args[0] if args.size() > 0 else 1)
		"open_portal":
			open_portal(args[0] if args.size() > 0 else "", args[1] if args.size() > 1 else "")
		"query_history":
			query_creation_history(args[0] if args.size() > 0 else "")
		"collaborate_with_ai":
			collaborate_with_ai()
		_:
			push_error("Unknown command: " + command)

# ===== UNIVERSE MANAGEMENT =====

func create_new_universe(name: String) -> void:
	"""Create a new universe"""
	var universe = load("res://beings/universe_universal_being.gd").new()
	universe.being_name = name
	universe.parent_universe = active_universe.being_uuid if active_universe else ""
	
	# Initialize universe components
	universe.add_component("res://components/universe_physics.ub.zip")
	universe.add_component("res://components/universe_time.ub.zip")
	universe.add_component("res://components/universe_lod.ub.zip")
	
	# Log creation
	if SystemBootstrap and SystemBootstrap.is_system_ready():
		var akashic = SystemBootstrap.get_akashic_library()
		if akashic:
			akashic.log_universe_event("creation", 
				"üåü A new universe '%s' emerges from the cosmic forge..." % name,
				{"universe": universe.being_uuid, "creator": being_uuid}
			)
	
	# Set as active universe
	if active_universe:
		active_universe.pentagon_sewers()
	active_universe = universe
	
	# Update console
	update_universe_status()
	creation_history.append({
		"type": "creation",
		"universe": universe.being_uuid,
		"name": name,
		"timestamp": Time.get_datetime_string_from_system()
	})

func modify_active_universe(modifications: Dictionary) -> void:
	"""Modify the active universe"""
	if not active_universe:
		push_error("No active universe to modify")
		return
	
	# Apply modifications
	for key in modifications:
		match key:
			"physics":
				active_universe.set_physics_parameters(modifications.physics)
			"time":
				active_universe.set_time_parameters(modifications.time)
			"lod":
				active_universe.set_lod_level(modifications.lod)
			_:
				push_error("Unknown modification type: " + key)
	
	# Log modification
	if SystemBootstrap and SystemBootstrap.is_system_ready():
		var akashic = SystemBootstrap.get_akashic_library()
		if akashic:
			akashic.log_universe_event("modification",
				"üîß The cosmic forge reshapes universe '%s'..." % active_universe.being_name,
				{"universe": active_universe.being_uuid, "modifications": modifications}
			)

func observe_universe(universe_uuid: String) -> void:
	"""Observe a specific universe"""
	if SystemBootstrap and SystemBootstrap.is_system_ready():
		var flood_gates = SystemBootstrap.get_flood_gates()
		if flood_gates:
			var universe = flood_gates.get_being_by_uuid(universe_uuid)
			if universe and universe.get_script().resource_path == "res://beings/universe_universal_being.gd":
				# Update viewport
				var universe_view = get_scene_node("UniverseView")
				if universe_view:
					for child in universe_view.get_children():
						child.queue_free()
					universe_view.add_child(universe)
				
				# Log observation
				var akashic = SystemBootstrap.get_akashic_library()
				if akashic:
					akashic.log_universe_event("observation",
						"üëÅÔ∏è The cosmic eye turns its gaze upon universe '%s'..." % universe.being_name,
						{"universe": universe.being_uuid, "observer": being_uuid}
					)

# ===== BEING EVOLUTION =====

func evolve_being(being_uuid: String, target_type: String) -> void:
	"""Evolve a being to a new type"""
	if SystemBootstrap and SystemBootstrap.is_system_ready():
		var flood_gates = SystemBootstrap.get_flood_gates()
		if flood_gates:
			var being = flood_gates.get_being_by_uuid(being_uuid)
			if being:
				# Evolve being
				var evolution_success = being.evolve_to(target_type)
				
				# Log evolution
				if evolution_success:
					var akashic = SystemBootstrap.get_akashic_library()
					if akashic:
						akashic.log_being_event(being, "evolution",
							{"new_form": target_type, "catalyst": being_uuid}
						)

# ===== PHYSICS & TIME CONTROL =====

func modify_physics(parameters: Dictionary) -> void:
	"""Modify physics parameters of active universe"""
	if active_universe:
		active_universe.set_physics_parameters(parameters)
		
		# Log modification
		if SystemBootstrap and SystemBootstrap.is_system_ready():
			var akashic = SystemBootstrap.get_akashic_library()
			if akashic:
				akashic.log_universe_event("modification",
					"‚ö° The laws of physics shift in universe '%s'..." % active_universe.being_name,
					{"universe": active_universe.being_uuid, "physics": parameters}
				)

func adjust_time(scale: float) -> void:
	"""Adjust time scale of active universe"""
	if active_universe:
		active_universe.set_time_parameters({"time_scale": scale})
		
		# Log modification
		if SystemBootstrap and SystemBootstrap.is_system_ready():
			var akashic = SystemBootstrap.get_akashic_library()
			if akashic:
				akashic.log_universe_event("modification",
					"‚è≥ The flow of time alters in universe '%s'..." % active_universe.being_name,
					{"universe": active_universe.being_uuid, "time_scale": scale}
				)

func set_lod_level(level: int) -> void:
	"""Set LOD level of active universe"""
	if active_universe:
		active_universe.set_lod_level(level)
		
		# Log modification
		if SystemBootstrap and SystemBootstrap.is_system_ready():
			var akashic = SystemBootstrap.get_akashic_library()
			if akashic:
				akashic.log_universe_event("modification",
					"üîç The level of detail shifts in universe '%s'..." % active_universe.being_name,
					{"universe": active_universe.being_uuid, "lod_level": level}
				)

# ===== PORTAL SYSTEM =====

func open_portal(from_universe: String, to_universe: String) -> void:
	"""Open a portal between universes"""
	if SystemBootstrap and SystemBootstrap.is_system_ready():
		var flood_gates = SystemBootstrap.get_flood_gates()
		if flood_gates:
			var from_uni = flood_gates.get_being_by_uuid(from_universe)
			var to_uni = flood_gates.get_being_by_uuid(to_universe)
			
			if from_uni and to_uni and from_uni.get_script().resource_path == "res://beings/universe_universal_being.gd" and to_uni.get_script().resource_path == "res://beings/universe_universal_being.gd":
				# Create portal
				var portal = PortalUniversalBeing.new()
				portal.connect_universes(from_uni, to_uni)
				
				# Log portal creation
				var akashic = SystemBootstrap.get_akashic_library()
				if akashic:
					akashic.log_universe_event("portal",
						"üåå A shimmering portal opens between '%s' and '%s'..." % 
						[from_uni.being_name, to_uni.being_name],
						{
							"from_universe": from_universe,
							"to_universe": to_universe,
							"portal": portal.being_uuid
						}
					)

# ===== HISTORY & QUERIES =====

func query_creation_history(query: String = "") -> Array[Dictionary]:
	"""Query the creation history"""
	if query.is_empty():
		return creation_history
	
	return creation_history.filter(func(entry):
		return entry.type == query or entry.universe == query
	)

# ===== AI COLLABORATION =====

func process_ai_suggestions() -> void:
	"""Process AI suggestions for universe creation/modification"""
	if SystemBootstrap and SystemBootstrap.is_system_ready():
		var gemma = SystemBootstrap.get_gemma_ai()
		if gemma and active_universe:
			# Get AI suggestions
			var suggestions = gemma.analyze_universe(active_universe)
			
			# Update AI panel
			var suggestion_label = get_scene_node("AIPanel/AISuggestion")
			if suggestion_label:
				suggestion_label.text = suggestions.get("suggestion", "No suggestions available")

func collaborate_with_ai() -> void:
	"""Initiate AI collaboration for universe creation/modification"""
	if SystemBootstrap and SystemBootstrap.is_system_ready():
		var gemma = SystemBootstrap.get_gemma_ai()
		if gemma:
			# Start AI collaboration session
			var collaboration = gemma.start_collaboration(being_uuid)
			
			# Log collaboration
			var akashic = SystemBootstrap.get_akashic_library()
			if akashic:
				akashic.log_system_event("AI Collaboration",
					"ü§ñ The cosmic mind of Gemma joins the creation dance...",
					{"collaboration": collaboration}
				)

# ===== UTILITY FUNCTIONS =====

func update_universe_status() -> void:
	"""Update the console display with current universe status"""
	if not active_universe:
		return
	
	var status_panel = get_scene_node("StatusPanel")
	if status_panel:
		var status_label = status_panel.get_node_or_null("StatusLabel")
		if status_label:
			status_label.text = "Active Universe: %s\nPhysics Scale: %.2f\nTime Scale: %.2f\nLOD Level: %d" % [
				active_universe.being_name,
				active_universe.physics_scale,
				active_universe.time_scale,
				active_universe.lod_level
			]

func handle_console_shortcuts(event: InputEventKey) -> void:
	"""Handle keyboard shortcuts for console commands"""
	match event.keycode:
		KEY_N:
			if event.ctrl_pressed:
				create_new_universe("New Universe")
		KEY_M:
			if event.ctrl_pressed:
				modify_active_universe({})
		KEY_O:
			if event.ctrl_pressed:
				observe_universe(active_universe.being_uuid if active_universe else "")
		KEY_P:
			if event.ctrl_pressed:
				open_portal("", "")
		KEY_H:
			if event.ctrl_pressed:
				query_creation_history()
		KEY_A:
			if event.ctrl_pressed:
				collaborate_with_ai()

func save_console_state() -> void:
	"""Save the current console state"""
	var save_data = {
		"active_universe": active_universe.being_uuid if active_universe else "",
		"creation_history": creation_history,
		"console_mode": console_mode,
		"ai_collaboration": ai_collaboration_enabled
	}
	
	var save_path = "user://console_state.json"
	var file = FileAccess.open(save_path, FileAccess.WRITE)
	if file:
		file.store_string(JSON.stringify(save_data))
		file.close()

# ===== AI INTERFACE =====

func ai_interface() -> Dictionary:
	"""Enhanced AI interface for console operations"""
	var base_interface = super.ai_interface()
	base_interface.console_commands = available_commands
	base_interface.active_universe = active_universe.being_uuid if active_universe else ""
	base_interface.creation_history = creation_history
	base_interface.console_mode = console_mode
	base_interface.ai_collaboration = ai_collaboration_enabled
	return base_interface

func ai_invoke_method(method_name: String, args: Array = []) -> Variant:
	"""Handle AI method invocations"""
	match method_name:
		"execute_command":
			execute_command(args[0] if args.size() > 0 else "", args.slice(1))
			return true
		"create_universe":
			create_new_universe(args[0] if args.size() > 0 else "AI Created Universe")
			return active_universe.being_uuid if active_universe else ""
		"modify_universe":
			modify_active_universe(args[0] if args.size() > 0 else {})
			return true
		"collaborate":
			collaborate_with_ai()
			return true
		_:
			return super.ai_invoke_method(method_name, args) 
